apps/hello-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-api
  labels:
    app: hello-api
spec:
  type: NodePort
  selector:
    app: hello-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
