apps/hello-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-api
  labels:
    app: hello-api
spec:
  ingressClassName: nginx
  rules:
    - host: hello-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-api
                port:
                  number: 80
